# tree-sitter-xcompose

./: CMakeLists.txt  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml  release.yml
bindings/c/: tree-sitter-xcompose.pc.in
bindings/c/tree_sitter/: tree-sitter-xcompose.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_xcompose/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterXComposeTests/: TreeSitterXComposeTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: corpus.txt
test/highlight/: XCompose
