[package]
name = "tree-sitter-xcompose"
description = "XCompose grammar for tree-sitter"
version = "0.3.0"
license = "MIT"
readme = "README.md"
authors = ["ObserverOfTime <chronobserver@disroot.org>"]
keywords = ["incremental", "parsing", "tree-sitter", "xcompose"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-xcompose"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
