[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-xcompose"
description = "XCompose grammar for tree-sitter"
version = "0.3.0"
keywords = ["incremental", "parsing", "tree-sitter", "xcompose"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[[project.authors]]
name = "ObserverOfTime"
email = "chronobserver@disroot.org"

[project.urls]
Homepage = "https://github.com/tree-sitter-grammars/tree-sitter-xcompose"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
